Bug 1794096 - Fix the rendering of padded linear gradient when the color line is zero-length. r=lsalzman

This is the linear-gradient version of bug 1793611 for radial gradients, and is fixed similarly.
Includes reftest.

Differential Revision: https://phabricator.services.mozilla.com/D158839